--- a/views/common/map.pug
+++ b/views/common/map.pug
@@ -2,9 +2,12 @@ section.map
         .map__center.contacts
             .map__title.subtitle Контакты
             ul.contacts__list.map__list
-                li.map__item.contacts__item.contacts__item-skype skype_kdn
-                li.map__item.contacts__item.contacts__item-mail 79852882808@yandex.ru
-                li.map__item.contacts__item.contacts__item-phone +7 985 288 28 08
+                li.map__item.contacts__item.contacts__item-skype
+                        a.map__link(href="skype: goryachev.andrej@yandex.ru") goryachev.andrej
+                li.map__item.contacts__item.contacts__item-mail
+                        a.map__link(href="mailto: 79852882808@yandex.ru") 79852882808@yandex.ru
+                li.map__item.contacts__item.contacts__item-phone
+                        a.map__link(href="tel: +79852882808") +7 985 288 28 08
                 li.map__item.contacts__item.contacts__item-address г. Чехов ул. Земская д. 6
         .map__google#googleMap
         script(async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwXItXdBwYG7xJ7I7wuNzUoKve-t0oYMs&callback=initMap")
