--- a/views/pages/my-works.pug
+++ b/views/pages/my-works.pug
@@ -35,9 +35,9 @@ block content
                 li.slider__item(v-if="counter == 3", :class='activeClassImg')
                     img.slider__img(src="../images/work-4.png", alt="")
         .works-buttons
-            .controls#btnPrevious(@click = 'changeBtnsImg', :class='btnLeftClassName + counter')
+            .controls#btnPrevious(@click = 'changeLeftBtnsImg', :class='btnLeftClassName + counter')
                 .btn-arrow-down
-            .controls#btnNext(@click = 'changeBtnsImg', :class='btnRightClassName + counter')
+            .controls#btnNext(@click = 'changeRightBtnsImg', :class='btnRightClassName + counter')
                 .btn-arrow-up
     section.comments
         .comments__title.big-title Что обо мне говорят
